--- a/styel.css
+++ b/styel.css
@@ -2,21 +2,33 @@
     margin: 0;
     padding: 0;
 }
-body{
-    background-color: rgb(184, 184, 184);
-}
 .container-fluid{   
-  font-family: "Playwrite VN", serif;
-  font-optical-sizing: auto;
+    font-family:'Times New Roman', Times, serif;"
+  font-size: 30px;
   font-weight:bolder;
-  font-style: normal;
+
 }
 .card img{
     height: 700px;
 }
 .scissor img{
     width: 50px;
-    height: 50px;
-    background-color: rgb(70, 67, 66);
+    height: 50px;;
     border-radius: 50px;
 }
+.cutstyle{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 47px;
+width: 1300px;
+height: auto;
+}
+.cutstyle img{
+    height: 300px;
+    width: 18rem;
+}
+/* .cutstyle img:hover{
+    height: 400px;
+    width: 20rem;
+    border: none;
+} */
