--- a/styel.css
+++ b/styel.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-.container-fluid{   
+body{   
     font-family:'Times New Roman', Times, serif;"
   font-size: 30px;
   font-weight:bolder;
